--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <!-- Container that hold 4 cards for My Locations Content that will be populated 
                     from local storage. -->
-                    <div class="list-group" id="history"></div>
+                    <div class="row h-100 justify-content-center align-items-center" id="history"></div>
 
     </article>
 
